# test-rp-rs

./: .env.example  Cargo.toml  build.rs  rust-toolchain.toml
src/: main.rs
src/discord/: commands.rs  mod.rs
